ui -- fix on errors overflow

--- a/public/stylesheets/screen_spotus.css
+++ b/public/stylesheets/screen_spotus.css
@@ -354,7 +354,7 @@ body {
   border-bottom: 2px #c9c9c9 solid;
   border-top: 1px #ccc solid;
   border-left: 1px #ccc solid;
-  height: 80px;
+  min-height: 80px;
   }
 
 .error p.flash_note, .success p.flash_note {
